# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  src_tests___init___py.html  src_tests_maksukortti_test_py.html  status.json
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: db_connection.py  index.py  initialize_db.py
src/entities/: password.py  user.py
src/repositories/: password_repository.py  user_repository.py
src/services/: password_service.py  user_service.py
src/tests/repositories/: password_repository_test.py  user_repository_test.py
src/tests/services/: password_service_test.py  user_service_test.py
src/ui/: add_password_view.py  login_view.py  register_view.py  ui.py  user_view.py
