[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["Antti Romppanen <romppanen.antti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cowsay = "^3.0"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
